--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ repository               : "academicpages/academicpages.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "profile.png"
+  avatar           : "Kevin-Standridge-Headshots-Web-24-683x1024.jpg"
   name             : "Kevin Standridge"
   
   bio              : "Visiting Assistant Professor of Accounting interested in studying the macroeconomic effects of tax and financial accounting"
