--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ author:
   avatar           : "Kevin-Standridge-Headshots-Web-24-683x1024.jpg"
   name             : "Kevin Standridge"
   
-  bio              : "Visiting Assistant Professor of Accounting interested in studying the macroeconomic effects of tax and financial accounting"
+  bio              : "Visiting Assistant Professor of Accounting"
   location         : "Salt Lake City, UT"
   employer         : "University of Utah"
   uri              : # URL
